# mk-weak-func-elf

./: .gitignore  CMakeLists.txt  Makefile  README.md  cmake-link-wrapper.py  elfwalk.cpp  main.cpp  mock-elfpatch.cpp
example/: Makefile  func.c  main.c  test-double-func.c
examples/: Makefile  func.c  main.c  stub.c  test-c-compile.c  weak-func.c
examples.old/: CMakeLists.txt
test/: CMakeLists.txt  Makefile  Makefile.test  func-section.c  link-wrapper.py  mock-func.c  mock-weak-func.c  test-cpp-compile.cpp  test-multi-func.c  test-weak-link.c
test/C/: CMakeLists.txt  Makefile.test  func-section.c  func.c  test-single-func.c
